--- a/templates/headless.jade
+++ b/templates/headless.jade
@@ -1,28 +1,38 @@
 doctype html
 html(lang="en")
-	head
-		meta(charset='utf-8')
-		title 
-		link(rel='stylesheet', href="bootstrap/css/bootstrap.min.css")
-		link(rel='stylesheet', href="styles/schedule.css")
-		//- scrip(src="Bootstrap/js/bootstrap.min.js")
+  head
+    meta(charset='utf-8')
+    title
+    link(rel='stylesheet', href="bootstrap/css/bootstrap.min.css")
+    link(rel='stylesheet', href="styles/schedule.css")
 
-	body
-		.container
-			.inner
-				.row
-					.col-md-9
-						table.table
-							thead
-								tr
-									th.time.small 日期
-									th.time 时间
-									th 节目
-							tbody
-								each item in schedules
-									tr
-										td #{item.begin}
-										td #{item.end}
-										td !{item.description}
-					.col-md-3
+    style(type='text/css').
+      .inner>.row {
+        padding:0;
+      }
+      .container{
+        padding:0;
+      }
+      .inner{
+        padding:0;
+      }
+
+  body
+    .container
+      .inner
+        .row
+          .col-md-9
+            table.table
+              thead
+                tr
+                  th.time.small 日期
+                  th.time 时间
+                  th 节目
+              tbody
+                each item in schedules
+                  tr
+                    td #{item.begin}
+                    td #{item.end}
+                    td !{item.description}
+          .col-md-3
 
