fix headless width

--- a/templates/headless.jade
+++ b/templates/headless.jade
@@ -12,6 +12,7 @@ html(lang="en")
       }
       .container{
         padding:0;
+        width:1000px;
       }
       .inner{
         padding:0;
@@ -25,7 +26,7 @@ html(lang="en")
             table.table
               thead
                 tr
-                  th.time.small 日期
+                  th.time 日期
                   th.time 时间
                   th 节目
               tbody
