opt bg file size

--- a/static_content/styles/schedule.css
+++ b/static_content/styles/schedule.css
@@ -115,7 +115,7 @@ table .time.small {
   background-position: top right;
 }
 .jumbotron.single5th {
-  background-image: url(../images/top-banners/single5th.png);
+  background-image: url(../images/top-banners/single5th.jpg);
   background-color: #fbf652;
   background-position: right;
 }
