--- a/static_content/styles/schedule.less
+++ b/static_content/styles/schedule.less
@@ -93,7 +93,7 @@ table .time.small{
 	}
 
 	&.single5th{
-		background-image: url(../images/top-banners/single5th.png);
+		background-image: url(../images/top-banners/single5th.jpg);
 		background-color: rgb(251,246,82);
 		background-position: right;
 	}
