--- a/templates/headless.jade
+++ b/templates/headless.jade
@@ -9,6 +9,7 @@ html(lang="en")
     style(type='text/css').
       .inner>.row {
         padding:0;
+        margin-top: 0;
       }
       .container{
         padding:0;
