set width of headless.time

--- a/templates/headless.jade
+++ b/templates/headless.jade
@@ -18,6 +18,9 @@ html(lang="en")
       .inner{
         padding:0;
       }
+      table .time{
+        width:150px;
+      }
 
   body
     .container
