headless bg color

--- a/templates/headless.jade
+++ b/templates/headless.jade
@@ -21,6 +21,9 @@ html(lang="en")
       table .time{
         width:200px;
       }
+      html{
+        background-color: rgb(243,243,243);
+      }
 
   body
     .container
