headless bg color 2

--- a/templates/headless.jade
+++ b/templates/headless.jade
@@ -17,11 +17,12 @@ html(lang="en")
       }
       .inner{
         padding:0;
+        background-color: rgb(243,243,243);
       }
       table .time{
         width:200px;
       }
-      html{
+      body{
         background-color: rgb(243,243,243);
       }
 
