--- a/static_content/styles/schedule.less
+++ b/static_content/styles/schedule.less
@@ -91,6 +91,8 @@ table .time.small{
 
 .container{
 	height: 100%;
+	min-height: 1050px;
+	position: relative;
 	padding-top:5px;
 	padding-bottom: 5px;
 	background: rgba(255,255,255,0.3);
@@ -101,7 +103,7 @@ table .time.small{
 	background: white;
 	height: 100%;
 	border-radius: 5px;
-	position:relative;
+	// position:relative;
 	&>.row{
 		padding: 30px;
 		margin-top: -170px;
@@ -110,7 +112,7 @@ table .time.small{
 
 .contact{
 	position: absolute;
-	right: 10px;
+	right: 30px;
 	bottom: 0;
 }
 
