--- a/templates/index.jade
+++ b/templates/index.jade
@@ -46,12 +46,15 @@ html(lang="en")
 				a.item(title='当前版本 v0.6.1' href='https://chrome.google.com/webstore/detail/miichan/ghnfiadioahomhmocmhgjhpmhcmcggjg') 
 					img(src='images/browser-icons/app-webstore.png') 
 					p WebStore
+
 				a.item(href='extensions/miichan-0.6.1.crx' title='当前版本 v0.6.1') 
 					img(src='images/browser-icons/app-chrome.png') 
 					p Chrome
+					div.badget v0.6.1
 				a.item(href='extensions/miichan-ff.zip' title='当前版本 v0.2') 
 					img(src='images/browser-icons/app-firefox.png') 
 					p Firefox
+					div.badget v0.1.0
 
 					
 
@@ -60,7 +63,7 @@ html(lang="en")
 			var bg_tiles=[
 			"hkt48",
 			"haruppi01","haruppi02","haruppi03","haruppi04","haruppi05","haruppi06",
-			"meru01",
+			"meru01","meru02",
 			"mio01",
 			"nako01","nako02",
 			"sakura01","sakura02","sakura03",
