--- a/templates/index.jade
+++ b/templates/index.jade
@@ -43,15 +43,15 @@ html(lang="en")
 
 			div.app-box
 				div 直播通知插件
-				a.item(title='当前版本 v0.6.1' href='https://chrome.google.com/webstore/detail/miichan/ghnfiadioahomhmocmhgjhpmhcmcggjg') 
+				a.item(href='https://chrome.google.com/webstore/detail/miichan/ghnfiadioahomhmocmhgjhpmhcmcggjg') 
 					img(src='images/browser-icons/app-webstore.png') 
 					p WebStore
 
-				a.item(href='extensions/miichan-0.6.1.crx' title='当前版本 v0.6.1') 
+				a.item(href='extensions/miichan-0.6.4.crx' 
 					img(src='images/browser-icons/app-chrome.png') 
 					p Chrome
-					div.badget v0.6.1
-				a.item(href='extensions/miichan-ff.zip' title='当前版本 v0.2') 
+					div.badget v0.6.4
+				a.item(href='extensions/miichan-ff.zip') 
 					img(src='images/browser-icons/app-firefox.png') 
 					p Firefox
 					div.badget v0.1.0
