fix index template

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -47,7 +47,7 @@ html(lang="en")
 					img(src='images/browser-icons/app-webstore.png') 
 					p WebStore
 
-				a.item(href='extensions/miichan-0.6.4.crx' 
+				a.item(href='extensions/miichan-0.6.4.crx')
 					img(src='images/browser-icons/app-chrome.png') 
 					p Chrome
 					div.badget v0.6.4
