--- a/templates/headless.jade
+++ b/templates/headless.jade
@@ -14,6 +14,7 @@ html(lang="en")
       .container{
         padding:0;
         width:1000px;
+        min-height:0;
       }
       .inner{
         padding:0;
