update banner for haruppi

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -11,7 +11,7 @@ html(lang="en")
 	body.bg-hkt48
 		.container
 			.inner
-				.jumbotron.head.single5th
+				.jumbotron.head.haruppi04
 					h1
 						a(href='http://www.zhanqi.tv/akb49' title='战旗AKB49') 48系番组直播间
 					p.lead &nbsp;
