--- a/static_content/styles/schedule.css
+++ b/static_content/styles/schedule.css
@@ -82,13 +82,13 @@ table .time.small {
 .jumbotron {
   background-repeat: no-repeat;
   background-position: right bottom;
-  padding-top: 200px;
-  padding-bottom: 100px;
+  padding-top: 230px;
+  padding-bottom: 35px;
 }
 .jumbotron h1 a {
   color: white;
   text-shadow: 1px 3px 5px #969696;
-  font-size: 56px;
+  font-size: 72px;
 }
 .jumbotron h1 a:hover {
   text-decoration: none;
@@ -119,6 +119,11 @@ table .time.small {
   background-color: #fbf652;
   background-position: right;
 }
+.jumbotron.haruppi04 {
+  background-image: url(../images/top-banners/haruppi4.jpg);
+  background-color: #fbf652;
+  background-position: top;
+}
 .container {
   height: 100%;
   min-height: 1050px;
@@ -135,7 +140,7 @@ table .time.small {
 }
 .inner > .row {
   padding: 30px;
-  margin-top: -170px;
+  margin-top: -40px;
 }
 .contact {
   position: absolute;
