--- a/static_content/styles/schedule.less
+++ b/static_content/styles/schedule.less
@@ -44,13 +44,13 @@ table .time.small{
 	background-repeat: no-repeat;
 	background-position: right bottom;
 
-	padding-top: 200px;
-	padding-bottom: 100px;
+	padding-top: 230px;
+	padding-bottom: 35px;
 
 	h1 a{
 		color: white;
 		text-shadow: 1px 3px 5px rgba(150, 150, 150, 1);
-		font-size: 56px;
+		font-size: 72px;
 		&:hover{
 			text-decoration: none;
 		}
@@ -87,6 +87,11 @@ table .time.small{
 		background-position: right;
 	}
 
+	&.haruppi04{
+		background-image: url(../images/top-banners/haruppi4.jpg);
+		background-color: rgb(251,246,82);
+		background-position: top;
+	}
 }
 
 .container{
@@ -106,7 +111,7 @@ table .time.small{
 	// position:relative;
 	&>.row{
 		padding: 30px;
-		margin-top: -170px;
+		margin-top: -40px;
 	}
 }
 
