update top banner

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -11,7 +11,7 @@ html(lang="en")
 	body.bg-hkt48
 		.container
 			.inner
-				.jumbotron.head.haruppi04
+				.jumbotron.head.single7th
 					h1
 						a(href='http://www.zhanqi.tv/akb49' title='战旗AKB49') 48系番组直播间
 					p.lead &nbsp;
@@ -43,20 +43,20 @@ html(lang="en")
 
 			div.app-box
 				div 直播通知插件
-				a.item(href='https://chrome.google.com/webstore/detail/miichan/ghnfiadioahomhmocmhgjhpmhcmcggjg') 
-					img(src='images/browser-icons/app-webstore.png') 
+				a.item(href='https://chrome.google.com/webstore/detail/miichan/ghnfiadioahomhmocmhgjhpmhcmcggjg')
+					img(src='images/browser-icons/app-webstore.png')
 					p WebStore
 
 				a.item(href='extensions/miichan-0.6.4.crx')
-					img(src='images/browser-icons/app-chrome.png') 
+					img(src='images/browser-icons/app-chrome.png')
 					p Chrome
 					div.badget v0.6.4
-				a.item(href='extensions/miichan-ff.zip') 
-					img(src='images/browser-icons/app-firefox.png') 
+				a.item(href='extensions/miichan-ff.zip')
+					img(src='images/browser-icons/app-firefox.png')
 					p Firefox
 					div.badget v0.1.0
 
-					
+
 
 
 		script.
@@ -66,8 +66,8 @@ html(lang="en")
 			"meru01","meru02",
 			"mio01",
 			"nako01","nako02",
-			"sakura01","sakura02","sakura03",
-			"sashi01","sashi02","sashi03","sashi04","sashi05","sashi06","sashi07"
+			"sakura01","sakura02","sakura03","sakura04"
+			"sashi01","sashi02","sashi03","sashi04","sashi05","sashi06","sashi07","sashi08"
 			];
 			var tile_id=Math.floor(Math.random() * bg_tiles.length)
 			document.body.className="bg-"+bg_tiles[tile_id];
