--- a/static_content/styles/schedule.css
+++ b/static_content/styles/schedule.css
@@ -82,13 +82,13 @@ table .time.small {
 .jumbotron {
   background-repeat: no-repeat;
   background-position: right bottom;
-  padding-top: 230px;
-  padding-bottom: 35px;
+  padding-top: 220px;
+  padding-bottom: 0px;
 }
 .jumbotron h1 a {
   color: white;
-  text-shadow: 1px 3px 5px #969696;
-  font-size: 72px;
+  text-shadow: 0px 7px 12px #969696;
+  font-size: 90px;
 }
 .jumbotron h1 a:hover {
   text-decoration: none;
@@ -116,6 +116,11 @@ table .time.small {
 }
 .jumbotron.single5th {
   background-image: url(../images/top-banners/single5th.jpg);
+  background-color: #fbf652;
+  background-position: right;
+}
+.jumbotron.single7th {
+  background-image: url(../images/top-banners/single7th.jpg);
   background-color: #fbf652;
   background-position: right;
 }
