--- a/static_content/styles/schedule.less
+++ b/static_content/styles/schedule.less
@@ -1,4 +1,4 @@
-@bg-tiles: 
+@bg-tiles:
 hkt48
 miki01
 haruppi01 haruppi02 haruppi03 haruppi04 haruppi05 haruppi06
@@ -44,13 +44,13 @@ table .time.small{
 	background-repeat: no-repeat;
 	background-position: right bottom;
 
-	padding-top: 230px;
-	padding-bottom: 35px;
+	padding-top: 220px;
+	padding-bottom: 0px;
 
 	h1 a{
 		color: white;
-		text-shadow: 1px 3px 5px rgba(150, 150, 150, 1);
-		font-size: 72px;
+		text-shadow: 0px 7px 12px rgba(150, 150, 150, 1);
+		font-size: 90px;
 		&:hover{
 			text-decoration: none;
 		}
@@ -83,6 +83,12 @@ table .time.small{
 
 	&.single5th{
 		background-image: url(../images/top-banners/single5th.jpg);
+		background-color: rgb(251,246,82);
+		background-position: right;
+	}
+
+	&.single7th{
+		background-image: url(../images/top-banners/single7th.jpg);
 		background-color: rgb(251,246,82);
 		background-position: right;
 	}
