--- a/templates/index.jade
+++ b/templates/index.jade
@@ -62,11 +62,11 @@ html(lang="en")
 		script.
 			var bg_tiles=[
 			"hkt48",
-			"haruppi01","haruppi02","haruppi03","haruppi04","haruppi05","haruppi06",
+			"haruppi01","haruppi02","haruppi03","haruppi04","haruppi05","haruppi06","haruppi07",
 			"meru01","meru02",
 			"mio01",
 			"nako01","nako02",
-			"sakura01","sakura02","sakura03","sakura04"
+			"sakura01","sakura02","sakura03","sakura04",
 			"sashi01","sashi02","sashi03","sashi04","sashi05","sashi06","sashi07","sashi08"
 			];
 			var tile_id=Math.floor(Math.random() * bg_tiles.length)
