--- a/static_content/styles/schedule.less
+++ b/static_content/styles/schedule.less
@@ -1,11 +1,11 @@
 @bg-tiles:
 hkt48
 miki01
-haruppi01 haruppi02 haruppi03 haruppi04 haruppi05 haruppi06
+haruppi01 haruppi02 haruppi03 haruppi04 haruppi05 haruppi06 haruppi07
 meru01 meru02
 mio01
 nako01 nako02
-sakura01 sakura02 sakura03
+sakura01 sakura02 sakura03 sakura04
 sashi01 sashi02 sashi03 sashi04 sashi05 sashi06 sashi07
 ;
 
